--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,7 +35,7 @@ header {
     background-color: var(--primary);
 }
 
-.card-header {
+.card-header, .form-bg {
     background-color: var(--bee-gray);
 }
 
