--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -1,12 +1,12 @@
 <% if (success_msg && success_msg.length> 0) { %>
-    <div class="alert alert-success text-center mx-auto mt-3"
+    <div class="alert alert-success text-center mx-auto mt-3 flash-msg"
         style="max-width: 440px;">
         <%= success_msg %>
     </div>
     <% } %>
 
         <% if (error_msg && error_msg.length> 0) { %>
-            <div class="alert alert-danger text-center mx-auto mt-3"
+            <div class="alert alert-danger text-center mx-auto mt-3 flash-msg"
                 style="max-width: 440px;">
                 <%= error_msg %>
             </div>
