--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -18,5 +18,6 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;500;700&display=swap"
         rel="stylesheet">
-
+   
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
 </head>
