--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -3,5 +3,6 @@
 
     <h1 class="display-4">Welcome to <span class="the-z">Z</span>cleaning</h1>
     <p class="lead">Your one-stop solution for all your needs</p>
+    <span class="text-muted" id="currentDate"></span>
 
 </header>
