--- a/src/views/layout/layout.ejs
+++ b/src/views/layout/layout.ejs
@@ -2,29 +2,49 @@
 <html lang="en">
 <%- include('../partials/head') %>
 
-    <body>
-        <div class="bg-checker">
-            <div id="wrapper">
-                <%- include('../partials/header') %>
-                    <%- include('../partials/navigation') %>
-            </div>
-
-            <main>
-                <%- body %>
-            </main>
-            <%- include('../partials/footer') %>
+<body>
+    <div class="bg-checker">
+        <div id="wrapper">
+            <%- include('../partials/header') %>
+                <%- include('../partials/navigation') %>
         </div>
-        <script>
-            setTimeout(() => {
-                const alerts = document.querySelectorAll('.alert');
-                alerts.forEach((alert) => {
-                    alert.classList.add('fade');
-                    alert.classList.remove('show');
-                    setTimeout(() => alert.remove(), 300);
-                });
-            }, 3000);
-        </script>
-        <script src="/js/main.js"></script>
-    </body>
+
+        <main>
+            <% if (messages?.success_msg || messages?.error_msg) { %>
+                <div class="container mt-3">
+                    <div class="row justify-content-center">
+                        <div class="col-md-5">
+                            <% if (messages.success_msg) { %>
+                                <div class="alert alert-success text-center">
+                                    <%= messages.success_msg %>
+                                </div>
+                                <% } %>
+            
+                            <% if (messages.error_msg) { %>
+                                <div class="alert alert-danger text-center">
+                                    <%= messages.error_msg %>
+                                </div>
+                                <% } %>
+                        </div>
+                    </div>
+                </div>
+                <% } %>
+
+            <%- body %>             
+        </main>
+        <%- include('../partials/footer') %>
+    </div>
+    <script>
+        setTimeout(() => {
+            const alerts = document.querySelectorAll('.alert');
+            alerts.forEach((alert) => {
+                alert.classList.add('fade');
+                alert.classList.remove('show');
+                setTimeout(() => alert.remove(), 300);
+            });
+        }, 3000);
+    </script>
+    <script src="/js/main.js"></script>
+</body>
 
 </html>
