--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -1,17 +1,3 @@
-<% if (success_msg && success_msg.length> 0) { %>
-    <div class="alert alert-success text-center mx-auto mt-3 flash-msg"
-        style="max-width: 440px;">
-        <%= success_msg %>
-    </div>
-    <% } %>
-
-        <% if (error_msg && error_msg.length> 0) { %>
-            <div class="alert alert-danger text-center mx-auto mt-3 flash-msg"
-                style="max-width: 440px;">
-                <%= error_msg %>
-            </div>
-            <% } %>
-
 
 <div class="card mb-3 mx-auto p-3 mt-2"
     style="max-width: 440px;">
@@ -25,7 +11,9 @@
             <div class="card-body text-bg-dark p-3">
                 <h5 class="card-title">Welcome to ZCleaning!
                 </h5>
-                <p>Please log in to manage your account.</p>
+                <% if (!user) { %>
+                    <p>Please log in to manage your account.</p>
+                    <% } %>
                 <p class="card-text">
                     <% if (!user) { %>
                         <a href="/auth/google"
@@ -40,7 +28,8 @@
                                 class="d-flex flex-column align-items-start">
                                 <p class="mb-2">You're logged in
                                     as <strong>
-                                        <%= user.displayName %>
+                                        <%= user?.account_firstname %>
+                                            <%= user?.account_lastname %>
                                     </strong></p>
                                 <a href="/logout"
                                     class="btn btn-outline-danger d-flex align-items-center">Logout</a>
