--- a/src/views/layout/layout.ejs
+++ b/src/views/layout/layout.ejs
@@ -45,6 +45,9 @@
         }, 3000);
     </script>
     <script src="/js/main.js"></script>
+    <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
