--- a/src/views/pages/clients/list-clients.ejs
+++ b/src/views/pages/clients/list-clients.ejs
@@ -34,8 +34,7 @@
         <% clients.forEach(client=> { %>
           <div class="col-12 col-md-6 col-lg-4 d-flex">
             <div class="card shadow-sm border-warning flex-fill">
-              <div
-                class="card-body d-flex flex-column justify-content-between h-100">
+              <div class="card-body d-flex flex-column justify-content-between h-100">
                 <div>
                   <h5 class="card-title">
                     <i class="bi bi-person-circle me-1"></i>
