--- a/src/views/partials/navigation.ejs
+++ b/src/views/partials/navigation.ejs
@@ -2,4 +2,5 @@
     <a class="nav-link" href="/">Home</a>
     <a class="nav-link" href="#">Employees</a>
     <a class="nav-link" href="/clients">Clients</a>
+    <a class="nav-link" href="/about">About Us</a>
 </nav>
