Fix header padding for improved layout consistency

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <header
-    class="d-flex flex-column align-items-center justify-content-center header-info">
+    class="d-flex flex-column align-items-center justify-content-center header-info p-3">
 
     <h1 class="display-4">Welcome to <span class="the-z">Z</span>cleaning</h1>
     <p class="lead">Your one-stop solution for all your needs</p>
