--- a/src/views/layout/layout.ejs
+++ b/src/views/layout/layout.ejs
@@ -30,7 +30,36 @@
                 </div>
                 <% } %>
 
-            <%- body %>             
+            <%- body %>
+            
+            <!-- Offcanvas Mobile Sidebar -->
+            <div class="offcanvas offcanvas-start" tabindex="-1" id="mobileSidebar"
+                aria-labelledby="mobileSidebarLabel">
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="mobileSidebarLabel">ZCleaning</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
+                        aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <ul class="nav flex-column">
+                        <li class="nav-item"><a href="/dashboard" class="nav-link"><i
+                                    class="bi bi-house me-2"></i> Dashboard</a></li>
+                        <li class="nav-item"><a href="/clients" class="nav-link"><i
+                                    class="bi bi-people me-2"></i> Clients</a></li>
+                        <li class="nav-item"><a href="/appointments" class="nav-link"><i
+                                    class="bi bi-calendar2 me-2"></i> Appointments</a></li>
+                        <li class="nav-item"><a href="/payments" class="nav-link"><i
+                                    class="bi bi-cash-stack me-2"></i> Payments</a></li>
+                        <li class="nav-item"><a href="/admin/promote" class="nav-link"><i
+                                    class="bi bi-person-gear me-2"></i> Approve Users</a>
+                        </li>
+                        <li class="nav-item mt-4"><a href="/logout"
+                                class="nav-link text-danger"><i
+                                    class="bi bi-box-arrow-right me-2"></i> Logout</a></li>
+                    </ul>
+                </div>
+            </div>
+  
         </main>
         <%- include('../partials/footer') %>
     </div>
