--- a/src/views/pages/about.ejs
+++ b/src/views/pages/about.ejs
@@ -1,10 +1,10 @@
 <div class="container mt-5">
-    <div class="row align-items-center g-1">
+    <div class="row align-items-center g-5">
         <div class="col-md-4 mb-md-0">
             <img src="/images/owner.jpg" alt="Owner of ZCleaning"
-                class="img-fluid rounded shadow" style="max-width: 400px; height: auto;">
+                class="img-fluid rounded shadow w-100">
         </div>
-        <div class="col-md-7 border border-warning shadow p-3">
+        <div class="col-md-7 border border-warning shadow p-4">
             <h1 class="mb-3">About ZCleaning</h1>
             <p>ZCleaning is a family-owned residential cleaning service with
                 over 25 years of experience. We specialize in high-quality,
