refactor: Remove unused CSS class from edit client page

--- a/src/views/pages/clients/edit-clients.ejs
+++ b/src/views/pages/clients/edit-clients.ejs
@@ -1,7 +1,7 @@
 <div class="d-flex min-vh-100">
     <%- include("../../partials/sidebar") %>
   
-    <div class="flex-grow-1 d-flex justify-content-center lign-items-start px-3 mt-4 forsmtest">
+    <div class="flex-grow-1 d-flex justify-content-center lign-items-start px-3 mt-4">
       <div class="w-100" style="max-width: 700px;">
         <div class="card border-warning shadow-sm p-4 bg-light rounded form-bg">
           <h2 class="text-center mb-4">Edit Client</h2>
