--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -18,9 +18,7 @@
                     <% if (!user) { %>
                         <a href="/auth/google"
                             class="btn btn-outline-warning d-flex align-items-center gap-3">
-                            <img src="https://developers.google.com/identity/images/g-logo.png"
-                                width="20" height="20"
-                                alt="Google logo" />
+                            <i class="bi bi-google"></i>
                             Sign in with Google
                         </a>
                         <% } else { %>
