feat: Add missing payments report functionality and update navigation links

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -80,7 +80,9 @@ header {
     width: 70%;
 }
 
-/* .bi-google {
-    color: white;
-} */
+@media print {
+    .no-print {
+        display: none !important;
+    }
+}
 
