--- a/src/views/pages/dashboard.ejs
+++ b/src/views/pages/dashboard.ejs
@@ -36,7 +36,7 @@
                         <div class="card-body">
                             <h5 class="card-title">Payments</h5>
                             <p class="card-text">Track and update payments</p>
-                            <a href="/payments" class="btn btn-success">View
+                            <a href="/clients/missing-payments" class="btn btn-success">View
                                 Payments</a>
                         </div>
                     </div>
