--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,14 +1,16 @@
-<header
-    class="d-flex flex-column align-items-center justify-content-center header-info p-3">
-
-    <h1 class="display-4">Welcome to <span class="the-z">Z</span>cleaning</h1>
-    <p class="lead">Your one-stop solution for all your needs</p>
-    <span class="text-muted" id="currentDate"></span>
-
-    <!-- Mobile Nav Toggle Button -->
-    <button class="btn btn-outline-dark d-md-none m-2" type="button"
-        data-bs-toggle="offcanvas" data-bs-target="#mobileSidebar"
-        aria-controls="mobileSidebar">
-        <i class="bi bi-list"></i> Menu
-    </button>
-</header>
+<div class="no-print">
+    <header
+        class="d-flex flex-column align-items-center justify-content-center header-info p-3">
+    
+        <h1 class="display-4">Welcome to <span class="the-z">Z</span>cleaning</h1>
+        <p class="lead">Your one-stop solution for all your needs</p>
+        <span class="text-muted" id="currentDate"></span>
+    
+        <!-- Mobile Nav Toggle Button -->
+        <button class="btn btn-outline-dark d-md-none m-2" type="button"
+            data-bs-toggle="offcanvas" data-bs-target="#mobileSidebar"
+            aria-controls="mobileSidebar">
+            <i class="bi bi-list"></i> Menu
+        </button>
+    </header>
+</div>
