--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -2,7 +2,9 @@
   const d = new Date();
   const year = d.getFullYear(); 
 %>
-    <footer class="text-center py-3 mt-5 bg-dark text-white">
-        <p><img src="/images/logo2.png" alt="Logo-company-initials"></p>
-        <p class="mb-0">&copy; <%= year %> | ZCleaning App</p>
-    </footer>
+    <div class="no-print">
+      <footer class="text-center py-3 mt-5 bg-dark text-white">
+          <p><img src="/images/logo2.png" alt="Logo-company-initials"></p>
+          <p class="mb-0">&copy; <%= year %> | ZCleaning App</p>
+      </footer>
+    </div>
