--- a/src/views/partials/sidebar.ejs
+++ b/src/views/partials/sidebar.ejs
@@ -1,49 +1,50 @@
 <div class="no-print">
-        <nav class="bg-dark text-white p-3  d-none d-md-block" style="min-width: 250px; height: 100vh;">
-            <h4 class="mb-4 z"><span class="mt-9"><img src="/images/logo2.png" alt=""></span> ZCleaning</h4>
+    <nav class="bg-dark text-white p-3 d-none d-md-block" style="min-width: 250px; height: 100vh;">
+        <h4 class="mb-4 z">
+            <span class="mt-9"><img src="/images/logo2.png" alt=""></span> ZCleaning
+        </h4>
         <ul class="nav flex-column">
-                <li class="nav-item">
-                        <a href="/dashboard" class="nav-link text-white hover-underline">
-                                <i class="bi bi-house me-2"></i> Dashboard
-                        </a>
-                </li>
-        
-                <!-- Clients Section -->
-                <li class="nav-item">
-                        <a class="nav-link text-white hover-underline" data-bs-toggle="collapse"
-                                href="#clientsMenu" role="button">
-                                <i class="bi bi-people me-2"></i> Clients <i class="bi bi-chevron-down"></i>
-                        </a>
-                        <div class="collapse ps-3" id="clientsMenu">
-                                <a href="/clients" class="nav-link text-white">All
-                                        Clients</a>
-                                <a href="/clients/add" class="nav-link text-white">Add
-                                        Client</a>
-                        </div>
-                </li>
-        
-                <li class="nav-item">
-                        <a href="/appointments" class="nav-link text-white hover-underline">
-                                <i class="bi bi-calendar2 me-2"></i> Appointments
-                        </a>
-                </li>
-        
-                <li class="nav-item">
-                        <a href="/clients/missing-payments" class="nav-link text-white hover-underline">
-                                <i class="bi bi-cash-stack me-2"></i> Payments
-                        </a>
-                </li>
-        
-                <li class="nav-item">
-                        <a href="/admin/promote" class="nav-link text-white hover-underline">
-                                <i class="bi bi-person-gear me-2"></i> Approve Users
-                        </a>
-                </li>
-        
-                <li class="nav-item mt-4">
-                        <a href="/logout" class="nav-link text-danger">
-                                <i class="bi bi-box-arrow-right me-2"></i> Logout
-                        </a>
-                </li> </ul>
-        </nav>
+            <li class="nav-item">
+                <a href="/dashboard" class="nav-link text-white hover-underline">
+                    <i class="bi bi-house me-2"></i> Dashboard
+                </a>
+            </li>
+
+            <!-- Clients Section -->
+            <li class="nav-item">
+                <a class="nav-link text-white hover-underline" data-bs-toggle="collapse"
+                   href="#clientsMenu" role="button">
+                    <i class="bi bi-people me-2"></i> Clients <i class="bi bi-chevron-down"></i>
+                </a>
+                <div class="collapse ps-3" id="clientsMenu">
+                    <a href="/clients" class="nav-link text-white">All Clients</a>
+                    <a href="/clients/add" class="nav-link text-white">Add Client</a>
+                </div>
+            </li>
+
+            <li class="nav-item">
+                <a href="/appointments" class="nav-link text-white hover-underline">
+                    <i class="bi bi-calendar2 me-2"></i> Appointments
+                </a>
+            </li>
+
+            <li class="nav-item">
+                <a href="/clients/missing-payments" class="nav-link text-white hover-underline">
+                    <i class="bi bi-cash-stack me-2"></i> Payments
+                </a>
+            </li>
+
+            <li class="nav-item">
+                <a href="/admin/promote" class="nav-link text-white hover-underline">
+                    <i class="bi bi-person-gear me-2"></i> Approve Users
+                </a>
+            </li>
+
+            <li class="nav-item mt-4">
+                <a href="/logout" class="nav-link text-danger">
+                    <i class="bi bi-box-arrow-right me-2"></i> Logout
+                </a>
+            </li>
+        </ul>
+    </nav>
 </div>
