--- a/src/views/pages/errors/500.ejs
+++ b/src/views/pages/errors/500.ejs
@@ -2,5 +2,5 @@
     <h1 class="display-1 text-danger">404</h1>
     <h2 class="mb-3">Page Not Found</h2>
     <p class="lead">Sorry, the page you are looking for does not exist.</p>
-    <a href="/" class="btn btn-primary mt-3">Go Home</a>
+    <a href="/" class="btn btn-warning mt-3">Go Home</a>
 </div>
