feat: Rename "Finances" button to "Payments" and update sidebar link to "Missing Payments"

--- a/src/views/pages/clients/list-clients.ejs
+++ b/src/views/pages/clients/list-clients.ejs
@@ -116,7 +116,7 @@
                   </form>
                   <a href="/clients/<%= client.client_id %>/payments"
                     class="btn btn-outline-success btn-sm w-50">
-                    Finances
+                    Payments
                   </a>
                   
                 </div>
