--- a/src/views/partials/sidebar.ejs
+++ b/src/views/partials/sidebar.ejs
@@ -30,7 +30,7 @@
 
             <li class="nav-item">
                 <a href="/clients/missing-payments" class="nav-link text-white hover-underline">
-                    <i class="bi bi-cash-stack me-2"></i> Payments
+                    <i class="bi bi-cash-stack me-2"></i> Missing Payments
                 </a>
             </li>
 
