feat: Enhance client creation process with duplicate check and update address table constraints

--- a/src/views/pages/clients/add-clients.ejs
+++ b/src/views/pages/clients/add-clients.ejs
@@ -142,6 +142,7 @@
                 oldData.full_house==="false" ? "selected" : "" %>>Half</option>
             </select>
           </div>
+          <input type="hidden" name="is_active_new" value="true">
 
           <button type="submit" class="btn btn-warning w-100 mt-3">Add Client</button>
         </form>
