feat: Enhance user profile access control and improve navigation dropdown for user account

--- a/src/views/pages/clients/list-clients.ejs
+++ b/src/views/pages/clients/list-clients.ejs
@@ -75,7 +75,7 @@
                   <%= client.preferred_day %>
                 </p>
                 <p class="card-text mb-1"><strong>Address:</strong>
-                  <%= client.street %>, 
+                  <span class="user-select-all"><%= client.street %></span>, 
                     <%= client.city %>
                       <%= client.zip %>
                       <strong> | Code:</strong>
