--- a/src/views/pages/clients/list-clients.ejs
+++ b/src/views/pages/clients/list-clients.ejs
@@ -106,23 +106,23 @@
                 <div
                   class="d-flex justify-content-between align-items-center gap-2">
                   <a href="/clients/edit/<%= client.client_id %>"
-                    class="btn btn-outline-primary btn-sm w-50">Edit</a>
-                  <form action="/clients/delete/<%= client.client_id %>"
-                    method="POST"
-                    onsubmit="return confirm('Are you sure you want to delete?')"
-                    class="w-50">
-                    <button type="submit"
-                      class="btn btn-outline-danger btn-sm w-100">Delete</button>
-                  </form>
-                  <a href="/clients/<%= client.client_id %>/payments"
-                    class="btn btn-outline-success btn-sm w-50">
-                    Payments
+                    class="btn btn-outline-primary btn-sm w-100">Edit
                   </a>
-                  
+                  <a href="/clients/<%= client.client_id %>/payments"
+                    class="btn btn-outline-success btn-sm w-100">Payments
+                  </a>
+
+                    <form action="/clients/delete/<%= client.client_id %>" method="POST"
+                      id="deleteForm-<%= client.client_id %>">
+                      <button type="button" class="btn btn-outline-danger btn-sm w-100"
+                        onclick="showDeleteModal('deleteForm-<%= client.client_id %>')">
+                        Delete
+                      </button>
+                    </form>            
                 </div>
-                <small class="d-block text-center mt-2">Once deleted, this
-                  client cannot be recovered</small>
+                <small class="d-block text-center mt-2">Once deleted, this client cannot be recovered</small>
               </div>
+              
             </div>
           </div>
         </div>
@@ -130,3 +130,4 @@
     </div>
   </div>
 </div>
+<%- include("../../partials/deleteModal") %>
