--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -20,4 +20,9 @@
         rel="stylesheet">
    
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    
+    <link
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        rel="stylesheet">
+
 </head>
