--- a/src/views/partials/sidebar.ejs
+++ b/src/views/partials/sidebar.ejs
@@ -23,7 +23,7 @@
             </li>
 
             <li class="nav-item">
-                <a href="/appointments" class="nav-link text-white hover-underline">
+                <a href="/appointments/preview-month" class="nav-link text-white hover-underline">
                     <i class="bi bi-calendar2 me-2"></i> Appointments
                 </a>
             </li>
