--- a/src/views/pages/clients/edit-clients.ejs
+++ b/src/views/pages/clients/edit-clients.ejs
@@ -189,6 +189,10 @@
 
             <button type="submit" class="btn btn-warning w-100 mt-3">Update Client</button>
           </form>
+          <div class="mt-3">
+            <a href="/dashboard" class="btn btn-outline-secondary btn-block">← Back to
+              Dashboard</a>
+          </div>
         </div>
       </div>
     </div>
