--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,10 +1,10 @@
-<% 
-  const d = new Date();
-  const year = d.getFullYear(); 
-%>
-    <div class="no-print">
-      <footer class="text-center py-3 mt-5 bg-dark text-white">
-          <p><img src="/images/logo2.png" alt="Logo-company-initials"></p>
-          <p class="mb-0">&copy; <%= year %> | ZCleaning App</p>
-      </footer>
-    </div>
+<div class="no-print">
+  <footer class="text-center py-3 mt-5 bg-dark text-white">
+      <p><img src="/images/logo2.png" alt="Logo-company-initials"></p>
+      <p>&copy; <%= year %> | ZCleaning | All rights reserved</p>
+      <div class="mb-2">
+        <a href="/privacy-policy" class="text-light mx-2">Privacy Policy</a> 
+        <a href="/terms-of-service" class="text-light mx-2">Terms of Service</a>
+        </div>
+  </footer>
+</div>
