--- a/src/views/pages/clients/add-clients.ejs
+++ b/src/views/pages/clients/add-clients.ejs
@@ -146,7 +146,12 @@
 
           <button type="submit" class="btn btn-warning w-100 mt-3">Add Client</button>
         </form>
+        <div class="mt-3">
+          <a href="/dashboard" class="btn btn-outline-secondary btn-block">← Back to
+            Dashboard</a>
+          </div>
       </div>
+      
     </div>
   </div>
 </div>
